Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-837

[C++] SerializedFile::ParseMetaData uses Seek, followed by Read, and could have race conditions

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.0.0
    • parquet-cpp
    • None

    Description

      As described in the PR for ARROW-508 https://github.com/apache/arrow/pull/300, the read-at-position should be performed atomically to prevent rare race conditions. I would suggest removing the `Seek` method from the input API altogether

      Attachments

        Activity

          People

            wesm Wes McKinney
            wesm Wes McKinney
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: