PARQUET-837: Remove RandomAccessSource::Seek method which can be a source of thread safety problems

We were only using `Seek` in a couple places. This will eliminate a source of difficult-to-reproduce race conditions

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #221 from wesm/PARQUET-837 and squashes the following commits:

f658549 [Wes McKinney] Remove RandomAccessSource::Seek method which can be a source of thread-safety issues

Change-Id: I4142a75aed3a705c11de4ca2a4bdb6a5fedb2f8c